Fix an issue that navbar languange option jump around ~570px wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,11 @@ a {
         --bs-nav-link-padding-x: 0.5rem;
         --bs-nav-link-padding-y: 0.3rem;
     }
+
+    #NavList {
+        -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    }
 }
 
 .sticky-top {
